--- a/public/views/home/home.view.client.html
+++ b/public/views/home/home.view.client.html
@@ -1,10 +1,26 @@
-<!DOCTYPE html>
-<html lang="en" ng-app="TrainlyIo">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+<header class="tr-fixed-top-header">
+    <div tr-match-my-height class="row">
+        <div class="col-sm-4 col-xs-2">
+        </div>
+        <div class="col-sm-4 col-xs-8" id="home-header-brand">
+            Trainly
+        </div>
+        <div class="col-sm-4 col-xs-2" id="home-header-login">
+            Log in
+        </div>
+    </div>
+</header>
+<section>
 
-</body>
-</html>
+</section>
+
+<section>
+
+</section>
+
+<hr>
+
+<section>
+
+</section>
+
