--- a/public/views/home/home.view.client.html
+++ b/public/views/home/home.view.client.html
@@ -1,17 +1,40 @@
-<header class="tr-fixed-top-header">
-    <div tr-match-my-height class="row">
-        <div class="col-sm-4 col-xs-2">
-        </div>
-        <div class="col-sm-4 col-xs-8" id="home-header-brand">
-            Trainly
-        </div>
-        <div class="col-sm-4 col-xs-2" id="home-header-login">
-            Log in
-        </div>
-    </div>
+<header class="tr-fixed-top-header" tr-set-min-height="80px">
+    <span id="home-header-brand">
+        Trainly
+    </span>
+    <ul id="home-navbar">
+        <li>
+            <a href="">
+                Statistics
+            </a>
+        </li>
+        <li>
+            <a href="">
+                Log in
+            </a>
+        </li>
+    </ul>
 </header>
-<section>
+<section id="home-main-section">
+    <div class="row" >
+        <div class="col-sm-3"></div>
+        <div class="col-sm-6" id="home-main-text">
+            <h1>
+                <b>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do.
+                </b>
+            </h1>
+            <!--<h2>-->
+                <!--<b>-->
+                    <!--Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do.-->
+                <!--</b>-->
+            <!--</h2>-->
+        </div>
+        <div class="col-sm-3"></div>
+    </div>
+    <div class="row">
 
+    </div>
 </section>
 
 <section>
