--- a/public/views/home/home.view.client.html
+++ b/public/views/home/home.view.client.html
@@ -2,7 +2,7 @@
     <span id="home-header-brand">
         Trainly
     </span>
-    <ul id="home-navbar">
+    <ul id="home-navbar" class="tr-large-device-content tr-navbar">
         <li>
             <a href="">
                 Statistics
@@ -14,36 +14,87 @@
             </a>
         </li>
     </ul>
+
 </header>
 <section id="home-main-section">
     <div class="row" >
-        <div class="col-sm-3"></div>
-        <div class="col-sm-6" id="home-main-text">
-            <h1>
+        <div class="col-sm-2"></div>
+        <div class="col-sm-8" id="home-main-text">
+            <!--Display this content in large windows-->
+            <h1 class="tr-large-device-content">
                 <b>
                     Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do.
                 </b>
             </h1>
-            <!--<h2>-->
-                <!--<b>-->
-                    <!--Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do.-->
-                <!--</b>-->
-            <!--</h2>-->
-        </div>
-        <div class="col-sm-3"></div>
-    </div>
-    <div class="row">
 
+            <!--Display this content in small windows-->
+            <h2 class="tr-small-device-content">
+                <b>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do.
+                </b>
+            </h2>
+        </div>
+        <div class="col-sm-2"></div>
+    </div>
+    <div id="home-button-group">
+        <div class="tr-large-device-content">
+            <a href="">Sign Up</a>
+            <a href="">Find a Course</a>
+        </div>
+        <div class="tr-small-device-content">
+            <div>
+                <a href="">Sign Up</a>
+            </div>
+            <div>
+                <a href="">Find a Course</a>
+            </div>
+        </div>
     </div>
 </section>
-
 <section>
+    <div class="row">
+        <div class="col-sm-2"></div>
+        <div class="col-sm-8 col-xs-12 tr-home-introduction">
+            <img src="../../avatar.png">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
+                eu fugiat nulla pariatur.
+            </p>
+        </div>
+        <div class="col-sm-2"></div>
+    </div>
 
 </section>
 
 <hr>
 
 <section>
-
+    <div class="row">
+        <div class="col-sm-2"></div>
+        <div class="col-sm-8 col-xs-12 tr-home-introduction">
+            <img src="../../avatar.png">
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et
+                dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip
+                ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore
+                eu fugiat nulla pariatur.
+            </p>
+        </div>
+        <div class="col-sm-2"></div>
+    </div>
 </section>
+
+<footer id="home-footer">
+    CS5200 Northeastern Universt Fall 17 Project <br>
+    &copy Amrit Bhatia, Zhe Chen, Janhavi Suresh Mahajan, Bowen Zhang
+</footer>
+
+<div style="display: none">
+    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna
+    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
+    occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+</div>
 
