--- a/public/css/style-home.css
+++ b/public/css/style-home.css
@@ -1,8 +1,3 @@
-.tr-fixed-top-header{
-    position: fixed;
-    width: 100%;
-    top: 0px;
-}
 #home-header-brand{
     font-size: 30px;
     position: absolute;
@@ -13,15 +8,13 @@
 }
 
 #home-navbar{
-    list-style-type: none;
     padding-right: 20px;
     float: right;
     font-size: 18px;
-    padding-top: 30px;
+    padding-top: 20px;
 }
 
 #home-navbar li{
-    display: inline;
     padding: 12px;
 }
 
@@ -39,11 +32,85 @@
     background-image: url('../home-background.png');
     background-size: 100%;
     color: whitesmoke;
+    padding-bottom: 70px;
 }
 
 #home-main-text{
-    padding-top: 80px;
+    padding-top: 60px;
     text-align: center;
+    margin-bottom: 30px;
+}
+
+#home-main-text h1{
+    font-size: 50px;
+}
+
+@media (max-width: 600px){
+    #home-main-section{
+        padding-bottom: 30px;
+    }
+    #home-main-text{
+        margin-left: 10px;
+        margin-right: 10px;
+    }
+}
+
+
+#home-button-group{
+    text-align: center;
+}
+
+#home-button-group a{
+    text-decoration: none;
+    display: inline-block;
+    color: whitesmoke;
+    margin: 10px;
+    border: solid whitesmoke 1px;
+    font-size: 20px;
+    min-width: 210px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    border-radius: 5px;
+    transition: color .2s ease-in-out;
+}
+
+#home-button-group a:hover{
+    background-color: whitesmoke;
+    color: darkred;
+}
+
+#home-footer{
+    text-align: center;
+    font-size: 15px;
+    margin-top: 70px;
+}
+
+.tr-home-introduction{
+    overflow: auto;
+    margin: 10px;
+    margin-top: 50px;
+}
+.tr-home-introduction img{
+    float: right;
+    margin-left: 100px;
+    border-radius: 50%;
+    border: solid darkred 2px;
+    width: 200px;
+    height: auto;
+}
+
+.tr-home-introduction p{
+    padding-top: 50px;
+}
+
+@media (max-width: 600px){
+    .tr-home-introduction img{
+        display: none;
+    }
+
+    .tr-home-introduction p{
+        padding-top: 0px;
+    }
 }
 
 
