--- a/public/views/home/home.view.client.html
+++ b/public/views/home/home.view.client.html
@@ -108,6 +108,11 @@
     </div>
 </section>
 
+<div style="text-align: center">
+    <a href="#!/user">User</a>
+    <a href="#!/course">Course</a>
+</div>
+
 <footer id="home-footer">
     CS5200 Northeastern Universt Fall 17 Project <br>
     &copy Amrit Bhatia, Zhe Chen, Janhavi Suresh Mahajan, Bowen Zhang
