--- a/public/views/home/home.view.client.html
+++ b/public/views/home/home.view.client.html
@@ -23,7 +23,7 @@
     <span tr-small-device-navbar>
              <a href="" class="glyphicon glyphicon-menu-hamburger tr-navbar-opener tr-vertical-center"></a>
              <a href="" class="glyphicon glyphicon-remove tr-navbar-closer tr-vertical-center"></a>
-             <ul class="list-group tr-hidden-navbar-menu">
+             <ul class="list-group tr-collapsed-navbar-menu">
                  <a href="">
                      <li class="list-group-item">
                          Statistics
