--- a/public/views/home/home.view.client.html
+++ b/public/views/home/home.view.client.html
@@ -5,36 +5,60 @@
             Trainly
         </span>
     <ul id="home-navbar" class="tr-large-device-content tr-navbar tr-vertical-center">
+        <!--<li>-->
+            <!--<a href="">-->
+                <!--Statistics-->
+            <!--</a>-->
+            <!--<div class="tr-navbar-item-underline">-->
+            <!--</div>-->
+        <!--</li>-->
+        <!--<li>-->
+            <!--<a href="">-->
+                <!--Log In-->
+            <!--</a>-->
+            <!--<div class="tr-navbar-item-underline">-->
+            <!--</div>-->
+        <!--</li>-->
         <li>
             <a href="">
                 Statistics
+                <div class="tr-navbar-item-underline">
+                </div>
             </a>
-            <div class="tr-navbar-item-underline">
-            </div>
         </li>
         <li>
             <a href="">
                 Log In
+                <div class="tr-navbar-item-underline">
+                </div>
             </a>
-            <div class="tr-navbar-item-underline">
-            </div>
         </li>
     </ul>
     <span tr-small-device-navbar>
              <a href="" class="glyphicon glyphicon-menu-hamburger tr-navbar-opener tr-vertical-center"></a>
              <a href="" class="glyphicon glyphicon-remove tr-navbar-closer tr-vertical-center"></a>
              <ul class="list-group tr-collapsed-navbar-menu">
-                 <a href="">
-                     <li class="list-group-item">
-                         Statistics
-                     </li>
-                 </a>
+                 <!--<a href="">-->
+                     <!--<li class="list-group-item">-->
+                         <!--Statistics-->
+                     <!--</li>-->
+                 <!--</a>-->
 
-                 <a href="">
-                     <li class="list-group-item">
-                        Log In
-                     </li>
-                 </a>
+                 <!--<a href="">-->
+                     <!--<li class="list-group-item">-->
+                        <!--Log In-->
+                     <!--</li>-->
+                 <!--</a>-->
+                 <li class="list-group-item">
+                     <a href="">
+                         Statistics
+                     </a>
+                 </li>
+                 <li class="list-group-item">
+                     <a href="">
+                         Log In
+                     </a>
+                 </li>
              </ul>
          </span>
 </header>
