--- a/public/views/user/user.view.client.html
+++ b/public/views/user/user.view.client.html
@@ -1,5 +1,7 @@
 <ng-include src="'views/common/nav-header.html'"></ng-include>
-<section id="profile-main-section">
+
+<section id="profile-main-section"
+         tr-profile-tab>
 
 
     <div id="profile-pic">
@@ -30,22 +32,34 @@
                 <!--</li>-->
             <!--</ul>-->
             <div id="profile-tablist">
-                <a href="">
+                <a href=""
+                   data-target="#enrolled"
+                   class="tr-tab tr-active">
                     Enrolled
                 </a>
-                <a href="">
+                <a href=""
+                   data-target="#completed"
+                   class="tr-tab">
                     Completed
                 </a>
-                <a href="">
+                <a href=""
+                   data-target="#interested"
+                   class="tr-tab">
                     Insterested
                 </a>
-                <a href="">
+                <a href=""
+                   data-target="#created"
+                   class="tr-tab">
                     Created
                 </a>
-                <a href="">
+                <a href=""
+                   data-target="#pending"
+                   class="tr-tab">
                     Pending Validation
                 </a>
-                <a href="">
+                <a href=""
+                   data-target="#all-users"
+                   class="tr-tab">
                     All Users
                 </a>
             </div>
@@ -90,18 +104,68 @@
             </div>
         </div>
         <div class="col-sm-6">
-            <div id="tabpane">
-                <ul class="list-group">
-                    <li class="list-group-item">
-                        1234
-                    </li>
-                    <li class="list-group-item">
-                        1234
-                    </li>
-                    <li class="list-group-item">
-                        1234
-                    </li>
+            <div id="profile-tabpane">
+
+                <ul class="list-group tr-tab-content tr-active"
+                    id="enrolled"
+                    data-tab-type="list">
+                    <a href="">
+                        <li class="list-group-item">
+                            enr
+                        </li>
+                    </a>
                 </ul>
+
+                <ul class="list-group tr-tab-content"
+                    id="completed"
+                    data-tab-type="list">
+                    <a href="">
+                        <li class="list-group-item">
+                            comp
+                        </li>
+                    </a>
+                </ul>
+
+                <ul class="list-group tr-tab-content"
+                    id="interested"
+                    data-tab-type="list">
+                    <a href="">
+                        <li class="list-group-item">
+                            int
+                        </li>
+                    </a>
+                </ul>
+
+                <ul class="list-group tr-tab-content"
+                    id="created"
+                    data-tab-type="list">
+                    <a href="">
+                        <li class="list-group-item">
+                            cre
+                        </li>
+                    </a>
+                </ul>
+
+                <ul class="list-group tr-tab-content"
+                    id="pending"
+                    data-tab-type="list">
+                    <a href="">
+                        <li class="list-group-item">
+                            pen
+                        </li>
+                    </a>
+                </ul>
+
+                <ul class="list-group tr-tab-content"
+                    id="all-users"
+                    data-tab-type="normal">
+                    <a href="">
+                        <li class="list-group-item">
+                            all
+                        </li>
+                    </a>
+                </ul>
+
             </div>
 
         </div>
