course list items

--- a/public/views/user/user.view.client.html
+++ b/public/views/user/user.view.client.html
@@ -109,61 +109,54 @@
                 <ul class="list-group tr-tab-content tr-active"
                     id="enrolled"
                     data-tab-type="list">
-                    <a href="">
-                        <li class="list-group-item">
-                            enr
-                        </li>
-                    </a>
+                    <li class="list-group-item">
+                        <div class="row">
+                            <div class="col-sm-2 hidden-xs tr-course-list-img">
+                                <img src="avatar.png">
+                                <ng-rate-it ng-model="4" read-only="true"></ng-rate-it>
+                            </div>
+                            <div class="col-sm-7">
+                                <h5><b>Primary Topic</b></h5>
+                                <h4>Course Name</h4>
+                                <div>With First name last name</div>
+                                <div>Related topic: secondary topic</div>
+                            </div>
+                            <div class="col-sm-3 tr-course-list-date">
+                                <h5>Dec 3, 2017</h5>
+                                <a>View</a>
+                            </div>
+                        </div>
+                    </li>
                 </ul>
 
                 <ul class="list-group tr-tab-content"
                     id="completed"
                     data-tab-type="list">
-                    <a href="">
-                        <li class="list-group-item">
-                            comp
-                        </li>
-                    </a>
+
                 </ul>
 
                 <ul class="list-group tr-tab-content"
                     id="interested"
                     data-tab-type="list">
-                    <a href="">
-                        <li class="list-group-item">
-                            int
-                        </li>
-                    </a>
+
                 </ul>
 
                 <ul class="list-group tr-tab-content"
                     id="created"
                     data-tab-type="list">
-                    <a href="">
-                        <li class="list-group-item">
-                            cre
-                        </li>
-                    </a>
+
                 </ul>
 
                 <ul class="list-group tr-tab-content"
                     id="pending"
                     data-tab-type="list">
-                    <a href="">
-                        <li class="list-group-item">
-                            pen
-                        </li>
-                    </a>
+
                 </ul>
 
                 <ul class="list-group tr-tab-content"
                     id="all-users"
                     data-tab-type="normal">
-                    <a href="">
-                        <li class="list-group-item">
-                            all
-                        </li>
-                    </a>
+
                 </ul>
 
             </div>
@@ -178,7 +171,14 @@
                     Total Spent:
                 </div>
                 <hr>
-
+                <div class="row">
+                    <div class="col-xs-4">
+                        <i>2017-12-03</i>
+                    </div>
+                    <div class="col-xs-8">
+                        dalsfjadsklj dafdsf adfadsf
+                    </div>
+                </div>
             </div>
         </div>
     </div>
