--- a/public/css/style-profile.css
+++ b/public/css/style-profile.css
@@ -1,6 +1,7 @@
 #profile-main-section{
     padding-top: 200px;
     background-color: #F0E8E6;
+    padding-bottom: 25px;
 }
 #profile-pic {
     width: 25%;
@@ -93,12 +94,9 @@
 
 #profile-tabpane li{
     margin-bottom: 2px;
-    min-height: 150px;
-    max-height: 150px;
 }
 
 #account-history{
-    width: 90%;
     min-height: 300px;
     max-height: 300px;
     margin-top: 10px;
@@ -106,6 +104,12 @@
     background-color: white;
     overflow: scroll;
     overflow-x: hidden;
+}
+
+@media (max-width: 768px){
+    #account-history{
+        margin-left: 0;
+    }
 }
 
 #account-history-header{
@@ -130,8 +134,31 @@
     /*border-bottom: red 3px solid;*/
 /*}*/
 
-#enrolled a, #completed a, #interested a, #created a, #pending a, #all-users a{
-    text-decoration: none;
-    color: black;
+.tr-course-list-img img{
+    width: 100%;
+    height: 85px;
+    margin-bottom: 20px;
 }
 
+.tr-course-list-img{
+    padding: 2px;
+    text-align: center;
+}
+
+.tr-course-list-date{
+    padding-top: 15px;
+    text-align: center;
+}
+
+.tr-course-list-date h5{
+    color: gray;
+    font-size: 18px;
+}
+
+.tr-course-list-date a{
+    min-width: 100px;
+    text-decoration: none;
+    display: inline-block;
+    background-color: indianred;
+    color: white;
+}
