--- a/public/views/user/user.view.client.html
+++ b/public/views/user/user.view.client.html
@@ -149,8 +149,8 @@
 
                 <ul class="list-group tr-tab-content"
                     id="pending"
-                    data-tab-type="list">
-
+                    data-tab-type="normal">
+                    <li class="list-group-item">dafd</li>
                 </ul>
 
                 <ul class="list-group tr-tab-content"
