--- a/public/css/style-profile.css
+++ b/public/css/style-profile.css
@@ -33,16 +33,14 @@
     padding: 10px 20px;
     text-decoration: none;
     color: black;
-    border-right: lightgray 1px solid;
+    font-size: 16px;
+    font-weight: bold;
 }
 
 #profile-tablist a:hover{
     color: red;
 }
 
-#profile-tablist{
-    border-left: lightgray 1px solid;
-}
 
 #user-information{
     padding-top: 40px;
