--- a/public/views/course/course.view.client.html
+++ b/public/views/course/course.view.client.html
@@ -1,2 +1,18 @@
 <ng-include src="'views/common/nav-header.html'"></ng-include>
 
+<section id="course-main-section">
+    <div id="course-header">
+        <span id="course-name">
+            asdfads asdf eafe assdf ad e  asd
+        </span>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-3"></div>
+        <div class="col-sm-6" id="course-details">
+            dkajfladsjflk
+        </div>
+        <div class="col-sm-3"></div>
+    </div>
+
+</section>
