--- a/public/views/common/nav-header.html
+++ b/public/views/common/nav-header.html
@@ -5,7 +5,7 @@
     <ul class="tr-navbar tr-vertical-center tr-large-device-content" tr-underlined-navbar>
         <li>
             <a href="">
-                Statistics
+                My Profile
                 <div class="tr-navbar-item-underline">
                 </div>
             </a>
@@ -24,7 +24,7 @@
              <ul class="list-group tr-collapsed-navbar-menu">
                  <li class="list-group-item">
                      <a href="">
-                         Statistics
+                         My Profile
                      </a>
                  </li>
                  <li class="list-group-item">
