--- a/public/views/user/user.view.client.html
+++ b/public/views/user/user.view.client.html
@@ -150,7 +150,7 @@
 
                 <ul class="list-group tr-tab-content"
                     id="pending"
-                    data-tab-type="normal">
+                    data-tab-type="list">
                     <li class="list-group-item">
                         <div class="row">
                             <div class="col-xs-9">
