--- a/public/css/style-course.css
+++ b/public/css/style-course.css
@@ -1,6 +1,7 @@
 #course-main-section{
     background-color: #F5F8FA;
     padding-top: 80px;
+    padding-bottom: 70px;
 }
 
 #course-header{
@@ -12,10 +13,6 @@
 }
 
 #course-name{
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
     color: white;
     font-size: 50px;
     max-width: 75%;
@@ -23,6 +20,86 @@
 }
 
 #course-details{
-    padding-top: 30px;
+    padding-top: 10px;
+}
+
+#course-creator h4{
+    display: inline-block;
+}
+
+#course-info .tr-course-info-box{
+    margin-top: 15px;
+}
+
+.tr-course-info-box{
+    border: 2px gray solid;
+    font-size: 18px;
+    height: 80px;
+    position: relative;
+    padding-top: 40px;
+    text-align: center;
+}
+
+.tr-course-info-box-content{
+    transform: translate(0,-50%);
+}
+
+#course-material-list{
+    padding-top: 40px;
+    font-size: 18px;
+}
+
+#course-material-list li{
+    min-height: 200px;
+    margin-bottom: 10px;
+}
+
+.tr-course-material{
+    padding-top: 80px;
+}
+
+.tr-course-material-ordinal{
+    width: 160px;
+    height: 50px;
+    background-color: skyblue;
+    color: white;
+    border-radius: 50px 15px 5px;
+    position: absolute;
+    top: 5px;
+    left: -30px;
+    text-align: center;
+}
+
+.tr-question-board{
+    height: 500px;
+    overflow: scroll;
+    border-radius: 10px;
+    border: 2px gray solid;
+}
+
+.tr-question-label{
+    text-align: center;
+    font-size: 16px;
+}
+
+.tr-course-question .row{
+    margin: 10px 0;
+}
+
+.tr-question-editor{
+    padding: 70px 50px;
+}
+
+.tr-question-editor input{
+    width: 100%;
+    text-align: center;
+    padding: 10px 0;
+    background-color: green;
+    color: white;
+    border-radius: 10px;
+}
+
+.tr-question-editor textarea{
+    margin: 30px 0;
 }
 
