--- a/public/css/style.css
+++ b/public/css/style.css
@@ -19,6 +19,13 @@
     left: 50%;
     transform: translate(-50%,0);
 }
+
+.tr-center{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
 @media (max-width: 600px){
     .tr-large-device-content{
         display: none;
