--- a/public/views/course/course.view.client.html
+++ b/public/views/course/course.view.client.html
@@ -2,7 +2,7 @@
 
 <section id="course-main-section">
     <div id="course-header">
-        <span id="course-name">
+        <span id="course-name" class="tr-center">
             asdfads asdf eafe assdf ad e  asd
         </span>
     </div>
@@ -10,9 +10,201 @@
     <div class="row">
         <div class="col-sm-3"></div>
         <div class="col-sm-6" id="course-details">
-            dkajfladsjflk
+            <div id="course-desc">
+                <b>About this course:</b>
+                <p>
+                    dlskjfladskjflkaj
+                </p>
+            </div>
+            <div id="course-creator">
+                <h4>Creators:</h4>
+                First Name Last Name
+            </div>
+            <div>
+                <b>Primary Topic:</b>
+                PT
+            </div>
+            <div>
+                <b>Secondary Topics:</b>
+                st, st
+            </div>
+            <div id="course-info">
+                <div class="row">
+                    <div class="col-sm-4">
+                        <div class="tr-course-info-box">
+                            <div class="tr-course-info-box-content">
+                                <div>Materials</div>
+                                <div><b>10</b></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="tr-course-info-box">
+                            <div class="tr-course-info-box-content">
+                                <div>Tuition</div>
+                                <div><b>$1000</b></div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="tr-course-info-box">
+                            <div class="tr-course-info-box-content">
+                                <div>Creation Date</div>
+                                <div><b>12-04-17</b></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="course-material-list">
+                <ul class="list-group">
+                    <li class="list-group-item">
+                        <div class="tr-course-material">
+                            <div>
+                                <a href="https://course.ccs.neu.edu/cs5200f17/">https://course.ccs.neu.edu/cs5200f17/</a>
+                            </div>
+                            Size: <br>
+                            Type: <br>
+                        </div>
+                        <div class="tr-course-material-ordinal">
+                            <span class="tr-center">Material 1</span>
+                        </div>
+                    </li>
+
+                    <li class="list-group-item">
+                        <div class="tr-course-material">
+                            <a href="https://course.ccs.neu.edu/cs5200f17/">https://course.ccs.neu.edu/cs5200f17/</a>
+                        </div>
+                        <div class="tr-course-material-ordinal">
+                            <span class="tr-center">Material 1</span>
+                        </div>
+                    </li>
+
+                    <li class="list-group-item">
+                        <div class="tr-course-material">
+                            <div class="embed-responsive embed-responsive-16by9">
+                                <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/PIQSEq6tEVs"></iframe>
+                            </div>
+                        </div>
+                        <div class="tr-course-material-ordinal">
+                            <span class="tr-center">Material 1</span>
+                        </div>
+                    </li>
+
+                    <li class="list-group-item">
+                        <div class="tr-course-material">
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                            </p>
+                        </div>
+                        <div class="tr-course-material-ordinal">
+                            <span class="tr-center">Material 1</span>
+                        </div>
+                    </li>
+
+                </ul>
+            </div>
         </div>
         <div class="col-sm-3"></div>
+    </div>
+
+    <div class="row">
+        <div class="col-sm-7">
+            <h2 style="text-align: center"><i>The Question Board</i></h2>
+            <div class="tr-question-board">
+                <div class="tr-course-question">
+                    <div class="row">
+                        <div class="col-sm-4 hidden-xs tr-question-label">
+                            <b>
+                                Asked By: <br>
+                                USer <br>
+                            </b>
+                            1000 likes <br>
+                            <span class="glyphicon glyphicon-thumbs-up"></span> Like <br>
+
+                        </div>
+                        <div class="col-sm-8 col-xs-12">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-4 hidden-xs tr-question-label">
+                            <b>
+                                Related Material
+                            </b>
+                        </div>
+                        <div class="col-sm-8 col-xs-12">
+
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-4 hidden-xs tr-question-label">
+                            <b>
+                                Answered By: <br>
+                                USer <br>
+                            </b>
+                        </div>
+                        <div class="col-sm-8 col-xs-12">
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+                <hr>
+                <div class="tr-course-question">
+                    <div class="row">
+                        <div class="col-sm-4 hidden-xs tr-question-label">
+                            <b>
+                                Asked By: <br>
+                                USer <br>
+                            </b>
+                            1000 likes <br>
+                            <span class="glyphicon glyphicon-thumbs-up"></span> Like <br>
+
+                        </div>
+                        <div class="col-sm-8 col-xs-12">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-4 hidden-xs tr-question-label">
+                            <b>
+                                Related Material
+                            </b>
+                        </div>
+                        <div class="col-sm-8 col-xs-12">
+
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-sm-4 hidden-xs tr-question-label">
+                            <b>
+                                Answered By: <br>
+                                USer <br>
+                            </b>
+                        </div>
+                        <div class="col-sm-8 col-xs-12">
+                            <p>
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+        <div class="col-sm-5 tr-question-editor">
+            <form>
+                <b>Related Materials:</b>
+                <div>
+                    <span class="badge">1</span> <span class="badge">1</span> <span class="badge">1</span>
+                </div>
+                <textarea class="form-control" rows="5" required></textarea>
+                <input type="submit" value="Ask a question">
+            </form>
+
+        </div>
     </div>
 
 </section>
