--- a/public/views/home/home.view.client.html
+++ b/public/views/home/home.view.client.html
@@ -27,7 +27,7 @@
             </a>
         </li>
         <li>
-            <a href="">
+            <a href="" ng-click="model.login()">
                 Log In
                 <div class="tr-navbar-item-underline">
                 </div>
